# kubelight

./: .gitignore  README.md  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: fixtures.ts  playwright.config.ts
frontend/e2e/data/: resources.ts
frontend/e2e/mocks/: tauri.js
frontend/e2e/specs/: debug.spec.ts  kubeconfig-setup.spec.ts  multi-kubeconfig.spec.ts  pod-detail-tabs.spec.ts  resource-browser.spec.ts  yaml-editor.spec.ts
frontend/e2e/test-output/: page-html.txt
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: codemirror.tsx  context-selector.test.tsx  context-selector.tsx  diff-preview.tsx  kube-config-setup.test.tsx  kube-config-setup.tsx  kubeconfig-menu.test.tsx  kubeconfig-menu.tsx  log-viewer.test.tsx  log-viewer.tsx  namespace-filter.test.tsx  namespace-filter.tsx  network-diagnostics.test.tsx  network-diagnostics.tsx  pod-detail-tabs.test.tsx  pod-detail-tabs.tsx  port-forward.tsx  resource-detail-panel.test.tsx  resource-detail-panel.tsx  resource-table.test.tsx  resource-table.tsx  sidebar.test.tsx  sidebar.tsx  status-badge.tsx  toast.tsx  yaml-editor-panel.test.tsx  yaml-editor-panel.tsx  yaml-editor.test.tsx
frontend/src/hooks/: use-detail-panel.tsx  use-exec.ts  use-kube-context.ts  use-log-stream.ts  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: client.rs  context.rs  events.rs  logs.rs  main.rs  operations.rs  resources.rs  sessions.rs
(+11 files in other folders)
