[package]
name = "kubelight"
version = "0.1.0"
edition = "2021"
description = "Ultra-lightweight Kubernetes GUI"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
kube = { version = "0.98", default-features = false, features = ["client", "rustls-tls", "config", "ws"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio-stream = "0.1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
